# flashcards

client/: package-lock.json
client/public/: index.html
client/src/: App.svelte  Card.svelte  CardAdder.svelte
server/: Cargo.toml  docker-compose.yml
server/src/: command.rs  logger.rs  main.rs  models.rs  query.rs  redis_connector.rs
