[package]
name = "server"
version = "0.1.0"
authors = ["Branden <b.n.vennes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
redis = "0.15.1"
serde = "1.0.104"
serde_json = "1.0.48"
